--- a/src/utils/components.scss
+++ b/src/utils/components.scss
@@ -3,3 +3,4 @@
 @import "../pages/Home.scss";
 @import "../components/FormFilter.scss";
 @import "../pages/Recado.scss";
+@import "../components/BookModal.scss";
