--- a/src/utils/components.scss
+++ b/src/utils/components.scss
@@ -4,3 +4,4 @@
 @import "../components/FormFilter.scss";
 @import "../pages/Recado.scss";
 @import "../components/BookModal.scss";
+@import "../pages/Cart.scss";
