--- a/src/components/BookModal.scss
+++ b/src/components/BookModal.scss
@@ -9,7 +9,7 @@
   margin: auto;
   &--box {
     width: 60%;
-    height: 56.5%;
+    height: 521px;
     background: #fff;
     border-radius: 15px;
     margin-top: 2.5em;
@@ -24,7 +24,15 @@
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     width: 100%;
+    height: 420px;
+    object-fit: contain;
+  }
+  &--leftColumn{
+    width: 50%;
     height: 100%;
+  }
+  &--rightColumn{
+    width: 50%;
   }
   &--info {
     padding: 2em 1.5em 0 0;
@@ -47,5 +55,6 @@
     top: 6px;
     cursor: pointer;
     color: #36393e;
+    z-index: 1;
   }
 }
